fixed ordered lists and mobile alignment issue.

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -86,6 +86,13 @@ $hide-line-numbers: false;
   padding: 1px 1rem;
 }
 
+.code-keywords {
+  background-color: #eee;
+  border-radius: $border-radius-size;
+  padding: 0 7.640px;
+  padding: 0 0.382rem;
+}
+
 .button {
   @include transition(all 0.3s ease 0s);
   border-radius: $border-radius-size;
@@ -164,54 +171,110 @@ blockquote {
   font-style: italic;
 }
 
-pre {
-  @extend .block-padding;
-  @extend .code-font;
+cite { 
+  font-style: italic; 
 }
+
+
+// ------------------------------
+// code
+// ------------------------------
 
 code {
   @extend .code-font;
-}
-
-cite { 
-  font-style: italic; 
 }
 
 figure.code {
   @extend .font-size-small;
   @extend .margin-bottom-large;
   @extend .code-font;
-  overflow: auto;
   
   figcaption {  
-    text-align: right; 
-    margin: 4px 0 10px;  
-  
-    span { 
-      border: 1px solid #ebebeb; 
-      background-color: #fcfcfc;
-      padding: 1px 9.046px;
-      padding: 1px 0.452rem;
+    margin: 4px 0 10px;
+    line-height: 23.683px;
+    line-height: 1.184rem;
+    text-align: right;
+    
+    a { 
+      margin-left: -3px; 
+      text-decoration: underline;
+    }
+          
+    span, a { 
+      @extend .code-keywords;
+      display: inline-block;
     
       &:empty {
         display: none;
       }
     }
   }
-}
-
-pre.line-numbers {
-  @if $hide-line-numbers == true { 
-    display: none;
+  
+  .highlight {
+    overflow: auto;
   }
 }
 
-ul#topics li {
-  display: inline;
-  margin: 0 52.358px;
-  margin: 0 2.618rem;
-  line-height: 32.36px;
-  line-height: 1.618rem;
+pre {
+  @extend .block-padding;
+  @extend .code-font;
+  
+  &.line-numbers {
+    @if $hide-line-numbers == true { 
+      display: none;
+    }   
+  }
+}
+
+
+// ------------------------------
+// navigation
+// ------------------------------
+
+nav {
+  overflow: auto;
+  border-top: 2px dotted $text-color;
+  padding: 14.637px 0;
+  padding: 0.732rem 0;
+  margin-bottom: 84.715px;
+  margin-bottom: 4.236rem;
+  
+  // ----- search form ----- 
+  
+  form { 
+    float: right; 
+    
+    input.search { 
+      @extend .font-size-smallest;
+      border: none;
+      background-color: #f2f2f2;
+      padding: 9.046px 14.637px;
+      padding: 0.452rem 0.732rem;
+      border-radius: $border-radius-size;
+    }
+  }
+  
+  // ----- navigation links -----
+  
+  ul { 
+    float: left;
+    margin-top: 9.03333px; /* not from scale */
+    margin-top: 0.45rem; /* rounded */
+    line-height: 32.36px;
+    line-height: 1.618rem;
+    
+    li {
+      @extend .font-size-medium;
+      @extend .sans-serif-font;
+      display: inline; 
+      font-weight: bold;
+    }
+    
+    li + li { 
+      padding-left: 32.360px;
+      padding-left: 1.618rem;;
+    }
+  }
 }
 
 
@@ -272,8 +335,8 @@ body {
     
     span, a {
       border-radius: $border-radius-size;
-      padding: 1px 9.046px;
-      padding: 1px 0.452rem;
+      padding: 4.722px 12.361px;
+      padding: 0.236rem 0.618rem;
     }
     
     a {
@@ -302,55 +365,6 @@ body {
       a { 
         text-decoration: underline;
       }
-    }
-  }
-}
-
-
-// ------------------------------
-// navigation
-// ------------------------------
-
-nav {
-  overflow: auto;
-  border-top: 2px dotted $text-color;
-  padding: 14.637px 0;
-  padding: 0.732rem 0;
-  margin-bottom: 84.715px;
-  margin-bottom: 4.236rem;
-  
-  // ----- search form ----- 
-  
-  form { 
-    float: right; 
-    
-    input.search { 
-      @extend .font-size-smallest;
-      border: none;
-      background-color: #f2f2f2;
-      padding: 9.046px 14.637px;
-      padding: 0.452rem 0.732rem;
-      border-radius: $border-radius-size;
-    }
-  }
-  
-  // ----- navigation links -----
-  
-  ul { 
-    float: left;
-    margin-top: 9.03333px;
-    margin-top: 0.45rem; /* rounded */
-    
-    li {
-      @extend .font-size-medium;
-      @extend .sans-serif-font;
-      display: inline; 
-      font-weight: bold;
-    }
-    
-    li + li { 
-      padding-left: 32.360px;
-      padding-left: 1.618rem;
     }
   }
 }
@@ -457,16 +471,12 @@ article {
       
       time {
         @extend .margin-bottom-large;
-        display: block;
-      }
-      
-      > span:after {
-        content: ".";
       }
       
       > span:before, > span:after {
         padding: 0 4px;
         padding: 0 0.2rem; /* not from scale */
+        content: ".";
       }
     }
   }
@@ -494,6 +504,22 @@ article {
     @extend .margin-bottom-large;
     overflow: auto;
   }
+  
+  ul, ol {
+    @extend .block-padding;
+    @extend .margin-bottom-large;
+    text-align: left;
+    margin-left: 20px;
+    margin-left: 1rem;
+  }
+
+  ul {
+    list-style-type: disc;
+  }
+
+  ol {
+    list-style-type: decimal;
+  }
     
   p {
     @extend .margin-bottom-large;
@@ -502,11 +528,9 @@ article {
     line-height: 1.618rem;
       
     > code {
+      @extend .code-keywords;
       font-size: 17.56px;
       font-size: 0.878rem; /* 0.732 + 0.146 */
-      background-color: #eee;
-      padding: 0 4.722px;
-      padding: 0 0.234rem;
     }
     
     a { 
@@ -567,8 +591,8 @@ article {
     
     > a { 
       @extend .button;
-      @extend .font-size-medium;
-      padding: 10px 0;
+      padding: 0.452rem 0;
+      padding: 9.046px 0;
       display: block;
       width: 30%;
       margin: 0 auto;
@@ -681,8 +705,8 @@ article {
       }
       
       li + li {
-        padding-left: 20px;
-        padding-left: 1rem;
+        padding-left: 9.046px;
+        padding-left: 0.452rem;
       }
     }
     
@@ -721,11 +745,18 @@ article {
       font-size: 0.968rem; /* 0.732 + 0.236 */
     }
     
-    .entry-content h1 {
-      font-size: 31.32px;
-      font-size: 1.566rem; /* 1.184 + 0.382 */
-      line-height: 38.319px;
-      line-height: 1.916rem;
+    .entry-content {
+      h1 {
+        font-size: 31.32px;
+        font-size: 1.566rem; /* 1.184 + 0.382 */
+        line-height: 38.319px;
+        line-height: 1.916rem;
+      }
+    
+      h2 {
+        font-size: 23.683px;
+        font-size: 1.184rem;
+      }
     }
   }
 }
